--- a/src/style/stylesheets/style.css
+++ b/src/style/stylesheets/style.css
@@ -180,8 +180,8 @@ a:hover {
 .container-fluid {
     width: 100%;
     height: 100vh;
-    padding: 10px 20px 10px 20px;
-    overflow-y: scroll;
+    padding: 10px 20px 3px 20px;
+    overflow-y: auto;
 		overflow-x: hidden;
     background-color: #f4f2ec;
 }
@@ -235,7 +235,7 @@ a:hover {
 	background-color: #d8d0ba;
 	padding-bottom: 10px;
 	box-shadow: 0 0 3px #808080;
-	margin-top: 37px;
+	margin-top: 32px;
 	margin-bottom: 0px !important;
 }
 
@@ -257,7 +257,7 @@ a:hover {
 
 @media (max-width: 1440px) {
 	.mainMaps {
-		height: 725px;
+		height: 710px;
 		/*681*/
 	}
 }
@@ -372,7 +372,7 @@ a:hover {
 	background-color: #ffffff;
 	margin-top: 10px;
 	width: 65%;
-	min-height: 725px;
+	min-height: 710px;
 	box-shadow: 0 0 3px #808080;
 	overflow: hidden;
 	animation-name: closingM;
@@ -385,7 +385,7 @@ a:hover {
 	background-color: #ffffff;
 	margin-top: 10px;
 	width: 65%;
-	min-height: 725px;
+	min-height: 710px;
 	box-shadow: 0 0 3px #808080;
 	overflow: hidden;
 	animation-name: openingM;
@@ -398,7 +398,7 @@ a:hover {
 	background-color: #ffffff;
 	margin-top: 10px;
 	width: 65%;
-	min-height: 725px;
+	min-height: 710px;
 	box-shadow: 0 0 3px #808080;
 	overflow: hidden;
 	animation-name: openingMQ;
@@ -412,7 +412,7 @@ a:hover {
 	background-color: #f4f2ec;
 	/*background-color: #ffffff;*/
 	margin-top: 10px;
-	min-height: 725px;
+	min-height: 710px;
 	width: 0%;
 	visibility: hidden;
 }
@@ -423,9 +423,9 @@ a:hover {
 	background-color: #f4f2ec;
 	/*background-color: #ffffff;*/
 	margin-top: 10px;
-	min-height: 725px;
+	min-height: 710px;
 	width: 0%;
-	overflow-y: scroll;
+overflow-y: auto;
 	overflow-x: hidden;
 	box-shadow: 0 0 3px #808080;
 	animation-name: openingP;
@@ -439,10 +439,10 @@ a:hover {
 	background-color: #f4f2ec;
 	/*background-color: #ffffff;*/
 	margin-top: 10px;
-	min-height: 725px;
+	min-height: 710px;
 	overflow-x: hidden;
 	width: 60%;
-	overflow-y: scroll;
+overflow-y: auto;
 	box-shadow: 0 0 3px #808080;
 	animation-name: openingPPart;
     animation-duration: .25s;
@@ -456,9 +456,9 @@ a:hover {
 	/*background-color: #ffffff;*/
 	margin-top: 10px;
 	width: 65%;
-	overflow-y: scroll;
+overflow-y: auto;
 	overflow-x: hidden;
-	min-height: 725px;
+	min-height: 710px;
 	box-shadow: 0 0 3px #808080;
 	animation-name: openingPL;
     animation-duration: .25s;
@@ -476,9 +476,9 @@ a:hover {
 	/*background-color: #ffffff;*/
 	margin-top: 10px;
 	width: 65%;
-	overflow-y: scroll;
+overflow-y: auto;
 	overflow-x: hidden;
-	min-height: 725px;
+	min-height: 710px;
 	box-shadow: 0 0 3px #808080;
 	animation-name: openingPLPart;
     animation-duration: .25s;
@@ -493,7 +493,7 @@ a:hover {
 	width: 30%;
 	overflow: hidden;
 	visibility: visible;
-	min-height: 725px;
+	min-height: 710px;
 	box-shadow: 0 0 3px #808080;
 	animation-name: closingP;
     animation-duration: .25s;
@@ -503,7 +503,7 @@ a:hover {
 .mtypeFull {
 	border:double 3px #ffffff;
 	padding:5px;
-	min-height: 725px;
+	min-height: 710px;
 	background-color: #e6e1d3;
 	margin-top: 10px;
 	width: 4.5%;
