updates, in advance of preloading

--- a/src/style/stylesheets/style.css
+++ b/src/style/stylesheets/style.css
@@ -204,6 +204,7 @@ a:hover {
 
 .flex {
 	display: flex;
+	flex-direction: row;
 }
 
 .flexcol {
@@ -514,6 +515,18 @@ overflow-y: auto;
 	background-color: #f4f2ec;
 	width: 30px;
 	height: 30px;
+	/*margin:8px 10px;*/
+	padding: 5px;
+	margin-top: 10px;
+	margin-bottom: 10px;
+	border-radius: 5px;
+	box-shadow: 0 0 1px #808080;
+}
+
+.bIcon {
+	background-color: #f4f2ec;
+	width: 40px;
+	height: 40px;
 	margin:8px 10px;
 	border-radius: 5px;
 	box-shadow: 0 0 1px #808080;
@@ -593,14 +606,6 @@ overflow-y: auto;
 	opacity: .25;
 }
 
-.bIcon {
-	background-color: #f4f2ec;
-	width: 40px;
-	height: 40px;
-	margin:8px 10px;
-	border-radius: 5px;
-	box-shadow: 0 0 1px #808080;
-}
 
 .bIconSelected {
 	background-color: #ffffff;
